# synapticon_ros2_control-release

./: .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rosdoc2.yaml  rpm.store  tracks.yaml
.github/workflows/: docker.yml  format.yml  industrial_ci.yml
bringup/launch/: single_dof.launch.py  two_dof.launch.py
debian/: changelog  control  gbp.conf  rules
description/ros2_control/: single_dof.ros2_control.xacro  two_dof.ros2_control.xacro
description/urdf/: single_dof_in_world.urdf.xacro  two_dof_in_world.urdf.xacro  two_dof_macro.urdf.xacro
doc/: conf.py  index.rst
include/synapticon_ros2_control/: synapticon_interface.hpp
rpm/: ros-jazzy-synapticon-ros2-control.spec  ros-rolling-synapticon-ros2-control.spec  template.spec
scripts/: setup_test_environment.sh
src/: synapticon_interface.cpp  torque_control_executable.cpp
test/: test_controller_manager_integration.cpp
test/launch/: simple_test_with_virtual_eth.launch.py
