<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>synapticon_ros2_control</name>
  <version>0.2.0</version>
  <description>A ros2_control interface for Synapticon motor drivers</description>
  <author email="andyzelenak@elevaterobotics.ai">Elevate Robotics</author>
  <maintainer email="andyzelenak@elevaterobotics.ai">Elevate Robotics</maintainer>
  <maintainer email="zloncarevic@synapticon.com">Zvezdan Loncarevic</maintainer>
  <maintainer email="fweisshardt@synapticon.com">Florian Weisshardt</maintainer>
  <url type="website">https://www.synapticon.com/en/products/ros2-integration-von-synapticon</url>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>libcap-dev</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
